--- a/index.html
+++ b/index.html
@@ -6,28 +6,29 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="shortcur icon" href="css/img/logo.ico" />
     <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz@9..144&family=Lato&family=Oswald&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Manhattan - Coffee House</title>
 </head>
 <body>
 <!--Secao Banner-->
-<div class="container-banner-topo">
-    <div class="container-logo">
+<div class="topo">
+    <img src="css/img/logo.png" alt="logomarca">
+    <div>
         <a href="#informacoes">Informações</a>
         <a href="#contatos">Contatos</a>
         <a href="#horarios">Horários</a>
-
-        <div class="container-titulo">
+        </div>
+</div>
+        <div id="banner" class="container-imagem-parallax1">
+            <div>
             <h1>MANHATTAN - COFFEE HOUSE</h1>
         </div>
-    </div>
-
-</div>
+        </div>
 <!--Fim secao Banner-->
 
 <!--Secao Informações-->
-<div class="container-informacoes">
-    <div class="container-texto">
+<div id="informacoes" class="container-texto">
         <h2>EXPERIMENTE O MELHOR CAFÉ DA CIDADE!</h2>
         <p>O café não é uma simples bebida que foi preparada por alguém. O café é
             momento e nós mostraremos isso. Frases como “Que tal tomarmos um café?”
@@ -72,21 +73,76 @@
             Essas variações são consequências dos grãos do tipo Arábica. Tudo isso
             vai depender da torra, quanto mais clara ela for, maior será a acidez.</p> 
     </div>
-</div>
+
 <!--Fim secao Informações-->
 
 <!--Secao Contato-->
-<div class="container-contatos">
+<div id="contatos" class="container-imagem-parallax4">
+    <h2>Contatos & Endereço</h2>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3673.116814396121!2d-43.36308168443389!3d-22.982731546364604!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bda2ed54ec2e1%3A0x4431d262cad1d163!2sAv.%20Ayrton%20Senna%2C%203000%20-%20Barra%20da%20Tijuca%2C%20Rio%20de%20Janeiro%20-%20RJ%2C%2022775-904!5e0!3m2!1spt-BR!2sbr!4v1673618057703!5m2!1spt-BR!2sbr"
+    width="1024" height="450" style="border: 0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
+    <div class="container-contatos">
+        <p>Telefone & Whatsapp: (21) 99999-5555</p>
+        <p>E-mail: contato@manhattan.com.br</p>
+        <p>
+            Endereço: Av Ayrton Senna, 3000 - Barra da Tijuca - Rio de Janeiro
+        </p>
+    </div>
 </div>
 <!--Fim secao Contato-->
 
 <!--Secao Horários-->
-<div class="container-horarios">
-
+<div id="horarios" class="container-imagem-parallax5">
+    <h2>HORÁRIOS DE FUNCIONAMENTO</h2>
+    <div>
+        <ul class="lista-horarios">
+            <li>
+                <h3>SEGUNDA</h3>
+                <div></div>
+                <span class="texto-marrom">FECHADO</span>
+            </li>
+            <li>
+                <h3>TERÇA</h3>
+                <div></div>
+                <p>09:00 - 22:00</p>
+            </li>
+            <li>
+                <h3>QUARTA</h3>
+                <div></div>
+                <p>09:00 - 22:00</p>
+            </li>
+            <li>
+                <h3>QUINTA</h3>
+                <div></div>
+                <p>09:00 - 22:00</p>
+            </li>
+            <li>
+                <h3>SEXTA</h3>
+                <div></div>
+                <p>09:00 - 22:00</p>
+            </li>
+            <li>
+                <h3>SÁBADO</h3>
+                <div></div>
+                <p>12:00 - 22:00</p>
+            </li>
+            <li>
+                <h3>DOMINGO</h3>
+                <div></div>
+                <p>12:00 - 22:00</p>
+            </li>
+        </ul>
+    </div>
 </div>
+
 <!--Fim secao horarios-->
 
+<div class="container-rodape">
+    <p>&copy; Manhattan - Coffee House - Todos os direitos reservados</p>
+    <p>Desenvolvido por <span>"Lucas Ignácio dos Santos"</span></p>
+    <a href="#banner"></a>
+</div>
 
 
 </body>
